Fixing some errors

--- a/NonDLSaliency.ipynb
+++ b/NonDLSaliency.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 2,
       "metadata": {
         "id": "zsQPEnZSxln-"
       },
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 4,
       "metadata": {
         "id": "OsxZg9Ncx_Pa"
       },
@@ -47,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 8,
       "metadata": {
         "id": "tfM-jE7ZyhMW"
       },
@@ -71,7 +71,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 6,
       "metadata": {
         "id": "OjdW4jyO7suh"
       },
@@ -79,16 +79,17 @@
       "source": [
         "def KmeansTimes():\n",
         "  KMeans_times = {}\n",
-        "  n =1\n",
+        "  n = 1\n",
         "  for d in datasets:\n",
         "    t = timeit.timeit('computeKMeansForDataset(d)',globals=globals(),number=n)\n",
         "    KMeans_times[d] = t/n\n",
+        "  print(KmeansTimes)\n",
         "  joblib.dump(KMeans_times,'KMeans_times.pkl')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -96,12 +97,12 @@
           "evalue": "",
           "output_type": "error",
           "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m/var/folders/vv/15nxpsbx31qfpl5kyfc8dfs80000gn/T/ipykernel_27463/5911470.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0md\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdatasets\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m   \u001b[0mcomputeKMeansForDataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mKmeansTimes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/var/folders/vv/15nxpsbx31qfpl5kyfc8dfs80000gn/T/ipykernel_27463/2234017276.py\u001b[0m in \u001b[0;36mcomputeKMeansForDataset\u001b[0;34m(d)\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0mimg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mresize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m128\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m128\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mimg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0mimg\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mimg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m255\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'uint8'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m         \u001b[0mSAlMap\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mkMean_saliency\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m85\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m         \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'./Saliency/{method}/saliency_{d}/{i}.jpg'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mSAlMap\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[0mi\u001b[0m\u001b[0;34m+=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m~/COMPUTER VISION/ASSIGNMENTS/CV Project/kmeanssaliency1.py\u001b[0m in \u001b[0;36mkMean_saliency\u001b[0;34m(img, K)\u001b[0m\n\u001b[1;32m     59\u001b[0m             \u001b[0;31m# K distinct pixel colours\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     60\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mK\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 61\u001b[0;31m                 \u001b[0mD\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mIk\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     62\u001b[0m                 \u001b[0mS_Ik\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mS_Ik\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mprob2\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mD\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     63\u001b[0m             \u001b[0mSal2\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mS_Ik\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[1;32mc:\\Users\\PC\\OneDrive\\Desktop\\Saliency selector\\Time-Sensitive-Saliency-Selector\\NonDLSaliency.ipynb Cell 5\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/PC/OneDrive/Desktop/Saliency%20selector/Time-Sensitive-Saliency-Selector/NonDLSaliency.ipynb#W4sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfor\u001b[39;00m d \u001b[39min\u001b[39;00m datasets:\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/PC/OneDrive/Desktop/Saliency%20selector/Time-Sensitive-Saliency-Selector/NonDLSaliency.ipynb#W4sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m   computeKMeansForDataset(d)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/PC/OneDrive/Desktop/Saliency%20selector/Time-Sensitive-Saliency-Selector/NonDLSaliency.ipynb#W4sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m KmeansTimes()\n",
+            "\u001b[1;32mc:\\Users\\PC\\OneDrive\\Desktop\\Saliency selector\\Time-Sensitive-Saliency-Selector\\NonDLSaliency.ipynb Cell 5\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/PC/OneDrive/Desktop/Saliency%20selector/Time-Sensitive-Saliency-Selector/NonDLSaliency.ipynb#W4sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m img \u001b[39m=\u001b[39m resize(img,(\u001b[39m128\u001b[39m,\u001b[39m128\u001b[39m,img\u001b[39m.\u001b[39mshape[\u001b[39m2\u001b[39m]))\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/PC/OneDrive/Desktop/Saliency%20selector/Time-Sensitive-Saliency-Selector/NonDLSaliency.ipynb#W4sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m img \u001b[39m=\u001b[39m((img\u001b[39m/\u001b[39mimg\u001b[39m.\u001b[39mmax())\u001b[39m*\u001b[39m\u001b[39m255\u001b[39m)\u001b[39m.\u001b[39mastype(\u001b[39m'\u001b[39m\u001b[39muint8\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/PC/OneDrive/Desktop/Saliency%20selector/Time-Sensitive-Saliency-Selector/NonDLSaliency.ipynb#W4sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m SAlMap\u001b[39m=\u001b[39mkMean_saliency(img,\u001b[39m85\u001b[39;49m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/PC/OneDrive/Desktop/Saliency%20selector/Time-Sensitive-Saliency-Selector/NonDLSaliency.ipynb#W4sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m cv2\u001b[39m.\u001b[39mimwrite(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m./Saliency/\u001b[39m\u001b[39m{\u001b[39;00mmethod\u001b[39m}\u001b[39;00m\u001b[39m/saliency_\u001b[39m\u001b[39m{\u001b[39;00md\u001b[39m}\u001b[39;00m\u001b[39m/\u001b[39m\u001b[39m{\u001b[39;00mi\u001b[39m}\u001b[39;00m\u001b[39m.jpg\u001b[39m\u001b[39m'\u001b[39m,SAlMap)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/PC/OneDrive/Desktop/Saliency%20selector/Time-Sensitive-Saliency-Selector/NonDLSaliency.ipynb#W4sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m i\u001b[39m+\u001b[39m\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m\n",
+            "File \u001b[1;32mc:\\Users\\PC\\OneDrive\\Desktop\\Saliency selector\\Time-Sensitive-Saliency-Selector\\kmeanssaliency1.py:61\u001b[0m, in \u001b[0;36mkMean_saliency\u001b[1;34m(img, K)\u001b[0m\n\u001b[0;32m     59\u001b[0m \u001b[39m# K distinct pixel colours\u001b[39;00m\n\u001b[0;32m     60\u001b[0m \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m0\u001b[39m,K):\n\u001b[1;32m---> 61\u001b[0m     D \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mabs(Ik \u001b[39m-\u001b[39;49m k)\n\u001b[0;32m     62\u001b[0m     S_Ik \u001b[39m=\u001b[39m S_Ik \u001b[39m+\u001b[39m prob2[k] \u001b[39m*\u001b[39m D\n\u001b[0;32m     63\u001b[0m Sal2[i,j] \u001b[39m=\u001b[39m S_Ik\n",
+            "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
           ]
         }
       ],
@@ -300,7 +301,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.11"
+      "version": "3.11.4"
     }
   },
   "nbformat": 4,
